[gd_scene load_steps=10 format=3 uid="uid://t7um6uwx4hcj"]

[ext_resource type="Script" path="res://scripts/Weapon/Weapon.gd" id="1_88djt"]
[ext_resource type="Resource" uid="uid://y8hujqw40pki" path="res://resources/Weapons/Bow.tres" id="2_aaodg"]
[ext_resource type="PackedScene" uid="uid://c6y2fsbenup2f" path="res://scenes/Weapons/meleeArea.tscn" id="3_4gj4b"]
[ext_resource type="Texture2D" uid="uid://b561hydikthvs" path="res://assets/Weapons/bow.png" id="3_i41c0"]

[sub_resource type="Animation" id="Animation_mkl4a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponNode/WeaponSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_xmm3k"]
resource_name = "swing"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponNode/WeaponSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.75),
"transitions": PackedFloat32Array(1, 1, 1.68179, 1),
"update": 0,
"values": [0.0, -0.174533, 3.14159, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7gmjo"]
_data = {
"RESET": SubResource("Animation_mkl4a"),
"swing": SubResource("Animation_xmm3k")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqocq"]
size = Vector2(8, 12)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n3prf"]
radius = 8.0
height = 16.0

[node name="Weapon" type="Node2D" groups=["weapon"]]
script = ExtResource("1_88djt")
weapon = ExtResource("2_aaodg")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7gmjo")
}
autoplay = "swing"

[node name="WeaponNode" type="Node2D" parent="."]

[node name="WeaponSprite" type="Sprite2D" parent="WeaponNode"]
texture = ExtResource("3_i41c0")

[node name="MeleeArea" parent="WeaponNode/WeaponSprite" instance=ExtResource("3_4gj4b")]
damage = 50

[node name="CollisionShape2D" parent="WeaponNode/WeaponSprite/MeleeArea" index="0"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_qqocq")

[node name="ProjectileSpawnPosition" type="Marker2D" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 10
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CapsuleShape2D_n3prf")

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]

[editable path="WeaponNode/WeaponSprite/MeleeArea"]
